fix: TaskCard 上面的label小box修改樣式，將margin移除，改為在上層元素使用gap

--- a/taskify-frontend/src/components/TaskCard.module.scss
+++ b/taskify-frontend/src/components/TaskCard.module.scss
@@ -39,7 +39,6 @@
 .hoverCard {
   height: 10px;
   width: 25px;
-  margin: 0px 4px 10px;
   border-radius: 10px;
   text-align: center;
   &:hover {
